crates/pamoja-ffi/include/pamoja.h

// The result of a fallible pamoja call.
//
// A return of [`PamojaStatus::Ok`] means success; any other value indicates a
// failure whose description is available from [`pamoja_last_error_message`] on
// the same thread.
typedef enum {
  // The call succeeded.
  PamojaStatus_Ok = 0,
  // A transport-level failure while connecting, sending, or receiving.
  PamojaStatus_Transport = 1,
  // A device or peripheral input/output operation failed.
  PamojaStatus_Io = 2,
  // A payload could not be encoded or decoded.
  PamojaStatus_Codec = 3,
  // The operation targeted a resource that is closed or disconnected.
  PamojaStatus_Closed = 4,
  // The requested capability is not compiled into this build.
  PamojaStatus_Unsupported = 5,
  // An argument was null or otherwise invalid, for example non-UTF-8 text.
  PamojaStatus_InvalidArgument = 6,
  // A failure that does not map onto a more specific status.
  PamojaStatus_Other = 7,
  // A Rust panic was caught at the boundary; the call had no effect.
  PamojaStatus_Panic = 8,
  // A security check failed, such as an invalid identity or a bad signature.
  PamojaStatus_Auth = 9,
} PamojaStatus;
// An opaque handle to a duty-cycle guard.
//
// Record each transmission with [`pamoja_radio_duty_cycle_transmitted`], ask
// [`pamoja_radio_duty_cycle_ready`] before the next, and release it with
// [`pamoja_radio_duty_cycle_free`].
typedef struct PamojaRadioDutyCycle PamojaRadioDutyCycle;
// The radio settings of a LoRa link.
//
// Build one with [`pamoja_lora_link_default`] and adjust the fields that differ
// from the defaults. Values outside the ranges LoRa defines are clamped when the
// link is used: the spreading factor to 5-12, the coding-rate denominator to 5-8,
// and a bandwidth of 0 to one hertz.
typedef struct {
  // The channel bandwidth in hertz, such as `125000`.
  uint32_t bandwidth_hz;
  // The preamble length in symbols; the LoRa default is 8.
  uint16_t preamble_symbols;
  // The spreading factor, 5 (fastest) to 12 (longest range).
  uint8_t spreading_factor;
  // The coding-rate denominator, 5 to 8, for 4/5 to 4/8.
  uint8_t coding_rate_denominator;
  // `1` for an explicit header, `0` to omit the header symbols.
  uint8_t explicit_header;
  // `1` to append the frame CRC, `0` to leave it off.
  uint8_t crc;
} PamojaLoraLink;
// The LoRa modem registers of an SX127x for a link.
typedef struct {
  // RegModemConfig1: bandwidth, coding rate, and header mode.
  uint8_t modem_config_1;
  // RegModemConfig2: spreading factor, CRC, and the top bits of the symbol timeout.
  uint8_t modem_config_2;
  // RegModemConfig3: low data rate optimization and the AGC.
  uint8_t modem_config_3;
  // The DetectionOptimize bits of RegDetectOptimize, 0x05 for SF6 and 0x03 otherwise, to
  // put in its low three bits.
  uint8_t detection_optimize;
  // RegDetectionThreshold.
  uint8_t detection_threshold;
} PamojaSx127xModem;
// The amplifier settings of an SX127x: RegPaConfig, RegPaDac, and RegOcp.
typedef struct {
  // RegPaConfig: PaSelect, MaxPower, and OutputPower.
  uint8_t pa_config;
  // RegPaDac: the +20 dBm setting above +17 dBm on PA_BOOST, else its reset value.
  uint8_t pa_dac;
  // RegOcp: the current limit.
  uint8_t ocp;
  // The output power the settings produce, in dBm.
  int8_t output_dbm;
} PamojaSx127xTxPower;
// Records a transmission and the silence it owes.
//
// # Arguments
//
// * `guard` - the duty-cycle guard.
// * `started_us` - when the transmission started, in microseconds on the caller's clock.
// * `link` - the settings the frame was sent with.
// * `payload_len` - the payload length in bytes.
//
// # Returns
//
// The frame's time on air in microseconds, or 0 if `guard` is null.
//
// # Safety
//
// `guard` must be a live handle from [`pamoja_radio_duty_cycle_new`], or null.
uint64_t pamoja_radio_duty_cycle_transmitted(PamojaRadioDutyCycle *guard,
                                             uint64_t started_us,
                                             PamojaLoraLink link,
                                             uintptr_t payload_len);
// Returns how long the radio must still stay silent.
//
// # Arguments
//
// * `guard` - the duty-cycle guard.
// * `now_us` - the current time in microseconds on the caller's clock.
//
// # Returns
//
// The remaining silence in microseconds, zero when a transmission may start, or
// `UINT64_MAX` when the limit forbids transmitting or `guard` is null.
//
// # Safety
//
// `guard` must be a live handle from [`pamoja_radio_duty_cycle_new`], or null.
uint64_t pamoja_radio_duty_cycle_wait_us(const PamojaRadioDutyCycle *guard, uint64_t now_us);
// Reports whether a transmission may start now.
//
// # Arguments
//
// * `guard` - the duty-cycle guard.
// * `now_us` - the current time in microseconds on the caller's clock.
//
// # Returns
//
// `true` once the silence the last transmission owed has passed, or `false` if `guard`
// is null.
//
// # Safety
//
// `guard` must be a live handle from [`pamoja_radio_duty_cycle_new`], or null.
bool pamoja_radio_duty_cycle_ready(const PamojaRadioDutyCycle *guard, uint64_t now_us);
// Returns the earliest time the next transmission may start.
//
// # Arguments
//
// * `guard` - the duty-cycle guard.
//
// # Returns
//
// A time in microseconds on the caller's clock, or `UINT64_MAX` when the limit forbids
// transmitting or `guard` is null.
//
// # Safety
//
// `guard` must be a live handle from [`pamoja_radio_duty_cycle_new`], or null.
uint64_t pamoja_radio_duty_cycle_earliest_us(const PamojaRadioDutyCycle *guard);
// Releases a duty-cycle guard handle.
//
// Passing null is a no-op.
//
// # Safety
//
// `guard` must be a handle from [`pamoja_radio_duty_cycle_new`] that has not already been
// freed, or null. After this call it must not be used again.
void pamoja_radio_duty_cycle_free(PamojaRadioDutyCycle *guard);
// Reports whether an LLCC68 supports a link's spreading factor at its bandwidth.
//
// # Arguments
//
// * `link` - the link settings.
//
// # Returns
//
// `true` when the SX126x offers the bandwidth and the LLCC68 supports the pair: up to SF9
// at 125 kHz, SF10 at 250 kHz, and SF11 at 500 kHz.
bool pamoja_sx126x_llcc68_supports(PamojaLoraLink link);
// Returns the 24-bit RegFrf word an SX127x takes for a frequency.
//
// # Arguments
//
// * `frequency_hz` - the carrier frequency in hertz.
//
// # Returns
//
// The word, in steps of 32 MHz over 2^19, rounded to the nearest step.
uint32_t pamoja_sx127x_frequency_word(uint32_t frequency_hz);
// Returns the frequency an SX127x RegFrf word selects.
//
// # Arguments
//
// * `word` - the 24-bit frequency word.
//
// # Returns
//
// The carrier frequency in hertz, rounded to the nearest hertz.
uint32_t pamoja_sx127x_frequency_from_word(uint32_t word);
// Returns the SX127x address byte that reads a register.
//
// # Arguments
//
// * `address` - the register address.
//
// # Returns
//
// The address with the write bit clear.
uint8_t pamoja_sx127x_read_address(uint8_t address);
// Returns the SX127x address byte that writes a register.
//
// # Arguments
//
// * `address` - the register address.
//
// # Returns
//
// The address with the write bit set.
uint8_t pamoja_sx127x_write_address(uint8_t address);
// Returns the RegOpMode value for a LoRa operating mode.
//
// # Arguments
//
// * `mode` - a `PAMOJA_SX127X_MODE_` code; only its low three bits are read.
//
// # Returns
//
// The RegOpMode value, with the LoRa register page selected.
uint8_t pamoja_sx127x_lora_op_mode(uint8_t mode);
// Returns the RegOpMode value for an FSK operating mode, which image calibration needs.
//
// # Arguments
//
// * `mode` - a `PAMOJA_SX127X_MODE_` code; only its low three bits are read.
//
// # Returns
//
// The RegOpMode value.
uint8_t pamoja_sx127x_fsk_op_mode(uint8_t mode);
// Returns the operating mode a RegOpMode value holds.
//
// # Arguments
//
// * `op_mode` - the RegOpMode value.
//
// # Returns
//
// The `PAMOJA_SX127X_MODE_` code.
uint8_t pamoja_sx127x_mode_from_op_mode(uint8_t op_mode);
// Returns the LoRa modem registers for a link at a carrier.
//
// # Arguments
//
// * `link` - the link settings.
// * `frequency_hz` - the carrier frequency in hertz, which rules out 250 and 500 kHz in the
//   lowest band.
// * `symbol_timeout` - the single reception timeout in symbols, whose top bits go in
//   RegModemConfig2.
// * `out_modem` - receives the registers.
//
// # Returns
//
// [`PamojaStatus::Ok`] with `*out_modem` set, or [`PamojaStatus::InvalidArgument`] if the
// SX127x cannot use the link at the carrier or `out_modem` is null.
//
// # Safety
//
// `out_modem` must point to a writable [`PamojaSx127xModem`], or be null.
PamojaStatus pamoja_sx127x_modem(PamojaLoraLink link,
                                 uint32_t frequency_hz,
                                 uint16_t symbol_timeout,
                                 PamojaSx127xModem *out_modem);
// Returns the SX127x single reception timeout for a duration, in the link's symbols.
//
// # Arguments
//
// * `link` - the link settings.
// * `timeout_us` - how long to listen for a preamble, in microseconds.
//
// # Returns
//
// The timeout rounded up to whole symbols, from 4 to 1023.
uint16_t pamoja_sx127x_symbol_timeout(PamojaLoraLink link, uint64_t timeout_us);
// Returns the SX127x amplifier settings for an output power.
//
// # Arguments
//
// * `pa_boost` - `true` for the PA_BOOST output, `false` for RFO.
// * `output_dbm` - the output power wanted, clamped to what the output delivers.
//
// # Returns
//
// The settings.
PamojaSx127xTxPower pamoja_sx127x_tx_power_for_output(bool pa_boost, int8_t output_dbm);